Fix logo size for iPad

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     <header class="intro">
         <div class="intro-body">
           <div class="col-md-12 hidden-xs">
-              <img src="img/njguyer-horizontal-white.svg" height="95px"/>
+              <img src="img/njguyer-horizontal-white.svg" height="100px"/>
           </div>
           <div class="col-md-12 hidden-sm hidden-md hidden-lg">
-              <img src="img/njguyer-vertical-white.svg" height="95px"/>
+              <img src="img/njguyer-vertical-white.svg"/>
           </div>
         </div>
     </header>
