--- a/index.html
+++ b/index.html
@@ -246,7 +246,6 @@
                 </div>
                 <div class="form-group">
                   <input type="text" name="_gotcha" style="display:none" />
-                  <input type="hidden" name="_next" value="#thanks" />
                   <input type="hidden" name="_subject" value="Photography Session Booking" />
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
@@ -294,6 +293,7 @@
         $.ajax({
             url:'https://formspree.io/' + user + '@' + domain,
             type:'post',
+            dataType: 'jsonp',
             data:$('#contactForm').serialize(),
             success:function(){
               $('#formResponse').html('<div class="alert alert-success" role="alert"><i class="fa fa-check" aria-hidden="true"></i> Thanks for contacting us! We\'ll be in touch shortly!</div>');
