--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="google-site-verification" content="s4dg9UL2gRwm1cyr1Sa3grNDu7KL3m3B4WauaneSrjg" />
 
     <title>N.J. Guyer Photography</title>
 
